--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "-",
+  "name": "index.html",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": " server.js"
   },
   "devDependencies": {
+    "prisma": "^5.13.0",
     "vite": "^5.2.0"
-  }
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.11.3",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0"
+  },
+  "description": "",
+  "main": "main.js",
+  "author": "",
+  "license": "ISC"
 }
