--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": " server.js"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "prisma": "^5.13.0",
@@ -16,7 +15,8 @@
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "psql": "^0.0.1"
   },
   "description": "",
   "main": "main.js",
