--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.11.3",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
+    "nodeom": "^0.0.1",
     "psql": "^0.0.1"
   },
   "description": "",
